--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: custom_map
-description: A new Flutter package project a customized Map.
+description: A neww Flutter package project a customized Map stret map.
 version: 0.0.1
 homepage: https://github.com/Meimounac13520/custom_map
 
